# servant-swagger2-openapi

./: flake.nix  openApi.json  servant-example.cabal  swagger.json
app/: Main.hs
src/: Routes.hs
src/Routes/: OpenAPI.hs  Swagger.hs  Todo.hs
