cabal-version:      3.0
name:               servant-example
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Routes
      Routes.OpenAPI
      Routes.Swagger
      Routes.Todo
    build-depends:
        base >= 2 && <5
     , aeson
     , aeson-pretty
     , bytestring
     , insert-ordered-containers
     , lens
     , openapi3
     , servant
     , servant-openapi3
     , servant-server
     , servant-swagger
     , swagger2 
     , text
     , time
    hs-source-dirs:   src
    default-language: Haskell2010

executable servant-example
    import:           warnings
    main-is:          Main.hs
    build-depends:
       base >= 2 && <5
     , servant-example
     , warp
     , wai
     , servant-server

    hs-source-dirs:   app
    default-language: Haskell2010
